partially completed patient profile page

--- a/MiraiConsultMVC/Views/Home/Contact.cshtml
+++ b/MiraiConsultMVC/Views/Home/Contact.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MiraiConsultMVC.Models.Home.Contact
 <script type="text/javascript" src="../Scripts/bootstrap-dropdown.js"></script>
-@Scripts.Render("~/bundles/validation")
+@Scripts.Render("~/bundles/jqueryval")
 @using (Html.BeginForm(new { autocomplete = "off" }))
 {
     @Html.AntiForgeryToken()
