--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head runat="server">
+<head>
     <title>Mirai Consult™</title>
     <link rel="stylesheet" href="../Content/bootstrap.min.css" />
     <link href="../Content/navigation.css" rel="stylesheet" />
@@ -35,9 +35,9 @@
     @*<asp:ContentPlaceHolder ID="head" runat="server">
         </asp:ContentPlaceHolder>*@
 </head>
-<body>
+<body class ="form-horizontal">
+    @RenderSection("featured", required: false)
     <div id="wrap">
-        <form id="form1" runat="server" autocomplete="off" class="form-horizontal" onsubmit="fun()">
             <div class="navbar custom-navbar">
                 <div class="custom-navbar-links">
                     <div class="container">
@@ -98,8 +98,8 @@
                                 </ul>
                             </div>
                             @*<div class="singup_btn paddingrightby3">
-                                <a href="../admin/Login.aspx" class="btn singup_a ">Log in</a>
-                            </div>*@
+                                    <a href="../admin/Login.aspx" class="btn singup_a ">Log in</a>
+                                </div>*@
                         }
                     </div>
                 </div>
@@ -377,7 +377,6 @@
                     </div>
                 </div>
             </div>
-        </form>
     </div>
     <script type="text/javascript" src="../Scripts/autocomplete.js"></script>
     <script type="text/javascript">
