--- a/MiraiConsultMVC/Views/Patients/PatientProfile.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientProfile.cshtml
@@ -117,7 +117,7 @@
                                         <div class="controls">
                                             @*@if (ViewBag.countries != null)
                                             {*@
-                                                @Html.DropDownListFor(m => Model.CountryId, new SelectList(ViewBag.countries, "Value", "Text", Model.CountryId), "--Select Country--", new { @class = "input-block-level cust-lightgreen cust-gray drop-arrows max-width min-width", id = "ddlCountry", onchange = "selectedIndexChanged(this.value)" })
+                                                @Html.DropDownListFor(m => Model.CountryId, new SelectList(ViewBag.countries, "Value", "Text", Model.CountryId), "--Select Country--", new { @class = "input-block-level cust-lightgreen cust-gray drop-arrows max-width min-width", id = "ddlCountry", onchange = "getStatebyCountry(this.value)" })
                                             @*}
                                             else
                                             {
@@ -132,11 +132,11 @@
                                         <div class="controls">
                                             @if (ViewBag.states != null)
                                             {
-                                                @Html.DropDownListFor(m => Model.StateId, new SelectList(ViewBag.states, "Value", "Text", Model.StateId), "--Select State--", new { @class = "input-block-level  cust-lightgreen drop-arrows max-width min-width" })
+                                                @Html.DropDownListFor(m => Model.StateId, new SelectList(ViewBag.states, "Value", "Text", Model.StateId), "--Select State--", new { @class = "input-block-level  cust-lightgreen drop-arrows max-width min-width", id = "ddlState", onchange = "getCitybyState(this.value)" })
                                             }
                                             else
                                             {
-                                                @Html.DropDownListFor(m => Model.StateId, new SelectList("0"), new { @class = "input-block-level  cust-lightgreen drop-arrows max-width min-width" })
+                                               // @Html.DropDownListFor(m => Model.StateId, new SelectList("0"), new { @class = "input-block-level  cust-lightgreen drop-arrows max-width min-width", id="ddlState" })
                                             }
                                         </div>
                                     </div>
@@ -149,11 +149,11 @@
                                         <div class="controls">
                                             @if (ViewBag.cities != null)
                                             {
-                                                @Html.DropDownListFor(m => Model.CityId, new SelectList(ViewBag.cities, "Value", "Text", Model.CityId), "--Select City--", new { @class = "input-block-level cust-lightgreen drop-arrows max-width min-width" })
+                                                @Html.DropDownListFor(m => Model.CityId, new SelectList(ViewBag.cities, "Value", "Text", Model.CityId), "--Select City--", new { @class = "input-block-level cust-lightgreen drop-arrows max-width min-width", id = "ddlCity", onchange = "getLocationbyCity(this.value)" })
                                             }
                                             else
                                             {
-                                                @Html.DropDownListFor(m => Model.CityId, new SelectList("0"), "--Select City--", new { @class = "input-block-level cust-lightgreen drop-arrows max-width min-width" })
+                                                @Html.DropDownListFor(m => Model.CityId, new SelectList("0"), "--Select City--", new { @class = "input-block-level cust-lightgreen drop-arrows max-width min-width", id = "ddlCity" })
                                             }
                                         </div>
                                     </div>
@@ -164,11 +164,11 @@
                                         <div class="controls">
                                             @if (ViewBag.locations != null)
                                             {
-                                                @Html.DropDownListFor(m => Model.LocationId, new SelectList(ViewBag.locations, "Value", "Text", Model.LocationId), "--Select Location--", new { @class = "input-block-level cust-gray drop-arrows cust-lightgreen max-width min-width" })
+                                                @Html.DropDownListFor(m => Model.LocationId, new SelectList(ViewBag.locations, "Value", "Text", Model.LocationId), "--Select Location--", new { @class = "input-block-level cust-gray drop-arrows cust-lightgreen max-width min-width", id = "ddlLocation" })
                                             }
                                             else
                                             {
-                                                @Html.DropDownListFor(m => Model.LocationId, new SelectList("0"), "--Select Location--", new { @class = "input-block-level cust-gray drop-arrows cust-lightgreen max-width min-width" })
+                                                @Html.DropDownListFor(m => Model.LocationId, new SelectList("0"), "--Select Location--", new { @class = "input-block-level cust-gray drop-arrows cust-lightgreen max-width min-width", id = "ddlLocation" })
                                             }
                                         </div>
                                     </div>
@@ -229,50 +229,55 @@
 <script type="text/javascript">
     $(function () {
         $('#dob').datepicker();
-        $('CountryId').val()
     });
 
-    function selectedIndexChanged() {
-        var countryId = document.getElementById('ddlCountry').value;
-        alert(countryId);
+    function getStatebyCountry(countryId) {
         $.ajax({
             type: "GET",
-            url: '@Url.Action("Patients/poupulateStateByCountry")' + "?countryid =" +countryId,
-            data: param = "",
+            url: 'poupulateStateByCountry' + '?countryId=' + countryId,
+            datatype: "JSON",
             contentType: "application/json; charset=utf-8",
-            dataType: "json",
-            success: function(){alert("success")},
-            error: function () { alert("Error") }
+            success: function (returndata) {               
+                $("#ddlState").empty();
+                $("#ddlCity").empty();
+                $("#ddlLocation").empty();
+                for (var i = 0; i < returndata.length; i++) {
+                    $("#ddlState").append($('<option>').text(returndata[i].name).attr('value', returndata[i].stateid));
+                };
+            }
+        });
+    }
+    
+    function getCitybyState(stateId) {
+        $.ajax({
+            type: "GET",
+            url: 'poupulateCityByState' + '?stateId=' + stateId,
+            datatype: "JSON",
+            contentType: "application/json; charset=utf-8",
+            success: function (returndata) {
+                $("#ddlCity").empty();
+                $("#ddlLocation").empty();
+                for (var i = 0; i < returndata.length; i++) {
+                    $("#ddlCity").append($('<option>').text(returndata[i].name).attr('value', returndata[i].cityid));
+                };
+            }
         });
     }
 
-        function successFunc(data, status) {
-            alert(data);
-        }
-
-        function errorFunc() {
-            alert('error');
-        }
-
-    //function getStatebyCountry(countryId) {
-    //    $.ajax({
-    //        type: 'GET',
-    //        dataType: 'json',
-    //        url: '../../Services/UserService.svc/getStatebyCountry?countryid=' + countryId,
-    //        success: function (response) {
-    //            response = JSON.parse(response);
-    //            $("#state_select").empty();
-    //            $("#city_select").empty();
-    //            $("#location_select").empty();
-    //            for (var i = 0; i < response.length; i++) {
-    //                $("#state_select").append($('<option>').text(response[i].name).attr('value', response[i].stateid));
-    //            };
-    //        },
-    //        error: function () {
-    //            alert("Error");
-    //        }
-    //    });
-    //}
+    function getLocationbyCity(cityId) {
+        $.ajax({
+            type: "GET",
+            url: 'poupulateLocationByCity' + '?cityId=' + cityId,
+            datatype: "JSON",
+            contentType: "application/json; charset=utf-8",
+            success: function (returndata) {
+                $("#ddlLocation").empty();
+                for (var i = 0; i < returndata.length; i++) {
+                    $("#ddlLocation").append($('<option>').text(returndata[i].name).attr('value', returndata[i].locationid));
+                };
+            }
+        });
+    }
 
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
