--- a/MiraiConsultMVC/Views/Patients/PatientProfile.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientProfile.cshtml
@@ -18,18 +18,24 @@
                         <h5 class="title cust-header-main-text-title"> My Profile</h5>
                     </div>
                 </div>
-                <div class="wrapper-bordered" id="SuccessMessagediv" visible="false">
+                @if (ViewBag.message != null && (ViewBag.message == "Account has been updated successfully." || ViewBag.message == "Account has been Updated successfully and you will receive verification email shortly. Please check spam/junk incase you don't find an email in your inbox."))
+                {
+                 <div class="wrapper-bordered alert alert-success"  id="SuccessMessagediv" visible="true">
                     <div class="row-fluid">
                         <div class="span12">
-                            <label id="lblSuccessMessage"></label>
+                            <label id="lblSuccessMessage">@ViewBag.message</label>
                         </div>
                     </div>
                 </div>
+                }
                 <div id="controlcontainer" class="wrapper-bordered cust-font-style " visible="true">
                     <div class="row-fluid">
-                        <div class="span12" id="errorMessageDiv" visible="false">
-                            <label id="lblErrorMessage"></label>
-                        </div>
+                        @if (ViewBag.message != null && ViewBag.message == "This username is not available. Please select a different username.")
+                        {
+                            <div class="span12 alert alert-error" id="errorMessageDiv" visible="true">
+                                <label id="lblErrorMessage">@ViewBag.message</label>
+                            </div>
+                        }
                     </div>
                     <div class=" " id="patinet_profile">
                         <div class="row-fluid custom-equal-padding">
@@ -38,7 +44,7 @@
                                     <div class="control-group">
                                         <label class="control-label cust-font-style required ">First Name:</label>
                                         <div class="controls">
-                                            @Html.TextBoxFor(m => m.FirstName, new { @class = "cust-no-border cust-lightgreen input-block-level max-width min-width", placeholder = "First Name" })
+                                            @Html.TextBoxFor(m => m.FirstName, new { @class = "cust-no-border cust-lightgreen input-block-level max-width min-width", placeholder = "First Name" })<br/>
                                             @Html.ValidationMessageFor(m => m.FirstName, string.Empty, new { @class = "validation-summary-errors" })
                                         </div>
                                     </div>
@@ -47,7 +53,7 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label required  cust-font-style ">Last Name:</label>
                                         <div class="controls">
-                                            @Html.TextBoxFor(m => m.LastName, new { @class = "input-block-level cust-lightgreen cust-gray max-width min-width", placeholder = "Last Name" })
+                                            @Html.TextBoxFor(m => m.LastName, new { @class = "input-block-level cust-lightgreen cust-gray max-width min-width", placeholder = "Last Name" })<br/>
                                             @Html.ValidationMessageFor(m => m.LastName, string.Empty, new { @class = "validation-summary-errors" })
                                         </div>
                                     </div>
@@ -58,7 +64,7 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label required cust-font-style ">Email:</label>
                                         <div class="controls">
-                                            @Html.TextBoxFor(m => m.Email, new { @class = "input-block-level cust-lightgreen cust-gray max-width min-width", placeholder = "Email" })
+                                            @Html.TextBoxFor(m => m.Email, new { @class = "input-block-level cust-lightgreen cust-gray max-width min-width", placeholder = "Email" })<br/>
                                             @Html.ValidationMessageFor(m => m.Email, string.Empty, new { @class = "validation-summary-errors" })
                                         </div>
                                     </div>
@@ -67,7 +73,7 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label cust-font-style">Mobile No:</label>
                                         <div class="controls">
-                                            @Html.TextBoxFor(m => m.MobileNo, new { @class = "input-block-level cust-lightgreen max-width min-width", placeholder = "Mobile No", maxlength = "15" })
+                                            @Html.TextBoxFor(m => m.MobileNo, new { @class = "input-block-level cust-lightgreen max-width min-width", placeholder = "Mobile No", maxlength = "15" })<br/>
                                             @Html.ValidationMessageFor(m => m.MobileNo, string.Empty, new { @class = "validation-summary-errors" })
                                         </div>
                                     </div>
@@ -81,8 +87,8 @@
                                             <div class="input-append date" id="dob" data-date-format="dd/mm/yyyy" data-date-start-view="decade"
                                                  data-date-enddate="new Date()">
                                                 @Html.TextBoxFor(m => m.DateOfBirth, new { @class = "cust-lightgreen input-without-right-curve  date_box_width txtdateOfBirth", @style = "margin-top:0px;", placeholder = "Date Of Birth" })
-                                                @Html.ValidationMessageFor(m => m.DateOfBirth, string.Empty, new { @class = "validation-summary-errors" })
-                                                <span class="add-on add-on-green  icon-with-right-curve"></span>
+                                                <span class="add-on add-on-green  icon-with-right-curve"></span><br/>
+                                                @Html.ValidationMessageFor(m => m.DateOfBirth, string.Empty, new { @class = "validation-summary-errors" })                                                
                                             </div>
                                         </div>
                                     </div>
@@ -103,7 +109,10 @@
                                             else
                                             {
                                                 <label class="radio inline cust-font-style">                                              
-                                                    @Html.RadioButton("Gender", "Male", true , new { @class = "cust-font-style" }) Male
+                                                    @Html.RadioButton("Gender", "0", true , new { @class = "cust-font-style" }) Male
+                                                </label>
+                                                  <label class="radio inline gendermargin cust-font-style">
+                                                    @Html.RadioButton("Gender", "1", false, new { @class = "cust-font-style" }) Female
                                                 </label>
                                             }
                                         </div>
@@ -115,14 +124,15 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label cust-font-style">Country:</label>
                                         <div class="controls">
-                                            @*@if (ViewBag.countries != null)
-                                            {*@
+                                            @if (Model.Countries != null)
+                                            {
+                                                ViewBag.countries = Model.Countries;
                                                 @Html.DropDownListFor(m => Model.CountryId, new SelectList(ViewBag.countries, "Value", "Text", Model.CountryId), "--Select Country--", new { @class = "input-block-level cust-lightgreen cust-gray drop-arrows max-width min-width", id = "ddlCountry", onchange = "getStatebyCountry(this.value)" })
-                                            @*}
+                                            }
                                             else
                                             {
                                                 @Html.DropDownListFor(m => Model.CountryId, new SelectList(string.Empty), "--Select Country--", new { @class = "input-block-level cust-lightgreen cust-gray drop-arrows max-width min-width" })
-                                            }*@
+                                            }
                                         </div>
                                     </div>
                                 </div>
@@ -130,13 +140,14 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label cust-font-style">State:</label>
                                         <div class="controls">
-                                            @if (ViewBag.states != null)
+                                            @if (Model.States != null)
                                             {
+                                                ViewBag.states = Model.States;
                                                 @Html.DropDownListFor(m => Model.StateId, new SelectList(ViewBag.states, "Value", "Text", Model.StateId), "--Select State--", new { @class = "input-block-level  cust-lightgreen drop-arrows max-width min-width", id = "ddlState", onchange = "getCitybyState(this.value)" })
                                             }
                                             else
                                             {
-                                               // @Html.DropDownListFor(m => Model.StateId, new SelectList("0"), new { @class = "input-block-level  cust-lightgreen drop-arrows max-width min-width", id="ddlState" })
+                                               @Html.DropDownListFor(m => Model.StateId, new SelectList("0"), new { @class = "input-block-level  cust-lightgreen drop-arrows max-width min-width", id="ddlState" })
                                             }
                                         </div>
                                     </div>
@@ -147,8 +158,9 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label cust-font-style">City:</label>
                                         <div class="controls">
-                                            @if (ViewBag.cities != null)
+                                            @if (Model.Cities != null)
                                             {
+                                                ViewBag.cities = Model.Cities;
                                                 @Html.DropDownListFor(m => Model.CityId, new SelectList(ViewBag.cities, "Value", "Text", Model.CityId), "--Select City--", new { @class = "input-block-level cust-lightgreen drop-arrows max-width min-width", id = "ddlCity", onchange = "getLocationbyCity(this.value)" })
                                             }
                                             else
@@ -162,8 +174,9 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label cust-font-style">Location:</label>
                                         <div class="controls">
-                                            @if (ViewBag.locations != null)
+                                            @if (Model.Locations != null)
                                             {
+                                                ViewBag.locations = Model.Locations;
                                                 @Html.DropDownListFor(m => Model.LocationId, new SelectList(ViewBag.locations, "Value", "Text", Model.LocationId), "--Select Location--", new { @class = "input-block-level cust-gray drop-arrows cust-lightgreen max-width min-width", id = "ddlLocation" })
                                             }
                                             else
@@ -187,7 +200,8 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label cust-font-style">Pin Code:</label>
                                         <div class="controls">
-                                            @Html.TextBoxFor(m => m.Pincode, new { @class = "input-block-level cust-lightgreen cust-lightgreen max-width min-width", placeholder = "Pin Code", maxlength = "6", id = "txtPinCode" })
+                                            @Html.TextBoxFor(m => m.Pincode, new { @class = "input-block-level cust-lightgreen cust-lightgreen max-width min-width", placeholder = "Pin Code", maxlength = "6", id = "txtPinCode" })<br/>
+                                            @Html.ValidationMessageFor(m => m.Pincode, string.Empty, new { @class = "validation-summary-errors" })                                            
                                         </div>
                                     </div>
                                 </div>
@@ -197,7 +211,8 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label cust-font-style">Height (in cm):</label>
                                         <div class="controls">
-                                            @Html.TextBoxFor(m => m.Height, new { @class = "input-block-level cust-lightgreen cust-lightgreen max-width min-width", placeholder = "Height in cm", maxlength = "5", id = "txtHeight" })
+                                            @Html.TextBoxFor(m => m.Height, new { @class = "input-block-level cust-lightgreen cust-lightgreen max-width min-width", placeholder = "Height in cm", maxlength = "5", id = "txtHeight" })<br/>
+                                            @Html.ValidationMessageFor(m => m.Height, string.Empty, new { @class = "validation-summary-errors" })                                            
                                         </div>
                                     </div>
                                 </div>
@@ -205,7 +220,8 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label cust-font-style">Weight (in kg):</label>
                                         <div class="controls">
-                                            @Html.TextBoxFor(m => m.Weight, new { @class = "input-block-level cust-lightgreen cust-gray max-width min-width", placeholder = "Weight in kg", maxlength = "5", id = "txtWeight" })
+                                            @Html.TextBoxFor(m => m.Weight, new { @class = "input-block-level cust-lightgreen cust-gray max-width min-width", placeholder = "Weight in kg", maxlength = "5", id = "txtWeight" })<br/>
+                                            @Html.ValidationMessageFor(m => m.Weight, string.Empty, new { @class = "validation-summary-errors" })                                            
                                         </div>
                                     </div>
                                 </div>
@@ -214,8 +230,8 @@
                     </div>
                     <div class="row-fluid cust-padding-bw-row">
                         <div class="span12 btn-padding-left btn-margin-top profile-button" style="text-align:center">
-                            <input type="submit" class="btn cust-button-radius cust-skyblue cust-uppercase cust-space-around cust-medium-button cust-font-style" id="btnUpdatePatientAccount" value="Update" />
-                            <input type="reset" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style" value="Reset" />
+                            <input type="submit" class="btn cust-button-radius cust-skyblue cust-uppercase cust-space-around cust-medium-button cust-font-style" id="btnUpdatePatientAccount" value="Update" onclick="return (validation());" />
+                            <input type="reset" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style" value="Reset" onclick="ClearMessage()" />
                         </div>
                     </div>
                 </div>
@@ -230,6 +246,10 @@
     $(function () {
         $('#dob').datepicker();
     });
+    function ClearMessage() {
+        document.getElementById('SuccessMessagediv').style.display = 'none';
+        document.getElementById('errorMessagediv').style.display = 'none';
+    }
 
     function getStatebyCountry(countryId) {
         $.ajax({
@@ -277,6 +297,19 @@
                 };
             }
         });
+    }
+
+    function validation()
+    {
+        var msg = null;
+        if (document.getElementById('FirstName') == null && document.getElementById('FirstName') == '')
+        {
+            alert("Please enter First Name.");
+            return false;
+        }
+        else {
+            return true;
+        }
     }
 
     (function (i, s, o, g, r, a, m) {
