--- a/MiraiConsultMVC/Views/Questions/_DoctorQuestionList.cshtml
+++ b/MiraiConsultMVC/Views/Questions/_DoctorQuestionList.cshtml
@@ -36,7 +36,8 @@
                             }
                         </div>
                         <div class='custom-middle middle-size-padding question-padding' style='width:80%'>
-                            <a class='question_text' href='doctorquestiondetails.aspx?questionid=<%= question.QuestionId%>'>
+                            @*<a class='question_text' href='doctorquestiondetails.aspx?questionid=<%= question.QuestionId%>'>*@
+                            <a class='question_text' href='DoctorQuestionDetails?QuestionId=@(question.QuestionId)'>
                                 @question.QuestionText
                             </a>
                         </div>
