--- a/MiraiConsultMVC/Views/_ViewStart.cshtml
+++ b/MiraiConsultMVC/Views/_ViewStart.cshtml
@@ -1,4 +1,4 @@
-﻿@if (Convert.ToInt32(Session["UserType"]) == 0 && Session["UserType"] != null)
+﻿@if ((Convert.ToInt32(Session["UserType"]) == 0 || Convert.ToInt32(Session["UserType"]) == 1) && Session["UserType"] != null)
 {
     Layout = "~/Views/Shared/_PatientMasterLayout.cshtml";
 }
